fix styles to make text more readable

--- a/src/components/category-item/category-item.styles.scss
+++ b/src/components/category-item/category-item.styles.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  border: 3px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
 
@@ -18,7 +18,7 @@
     }
 
     & .category-body-container {
-      opacity: 0.9;
+      opacity: 1;
     }
   }
 
@@ -50,18 +50,17 @@
     justify-content: center;
     border: 1px solid black;
     background-color: white;
-    opacity: 0.7;
+    opacity: 0.9;
     position: absolute;
 
     h2 {
       font-weight: bold;
       margin: 0 6px 0;
       font-size: 22px;
-      color: #4a4a4a;
+      color: #151515;
     }
 
     p {
-      font-weight: lighter;
       font-size: 16px;
     }
   }
